changed to production

--- a/Chat_App/backend/.env
+++ b/Chat_App/backend/.env
@@ -9,4 +9,4 @@ CLOUDINARY_CLOUD_NAME=dur7dxvym
 CLOUDINARY_API_KEY=699663744577122
 CLOUDINARY_API_SECRET=Wru72Bwv-ChJAoUp404N9M0HwF8
 
-NODE_ENV=development
+NODE_ENV=production
